--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ matplotlib==3.1.3
 mock==4.0.1
 numexpr==2.7.1
 numpy==1.18.1
-pkg-resources==0.0.0
 protobuf==3.11.3
 pyparsing==2.4.6
 python-dateutil==2.8.1
@@ -22,9 +21,6 @@ scipy==1.4.1
 six==1.14.0
 sklearn==0.0
 tables==3.6.1
-tensorboard==1.13.1
-tensorflow-estimator==1.13.0
-tensorflow-gpu==1.13.1
+tensorflow==1.13.1
 termcolor==1.1.0
 tqdm==4.42.1
-Werkzeug==1.0.0
