--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,6 @@ venv.bak
 
 # Codes for not pushing them
 test_script.py
+script_get_allresults.py
 utils/global_classes_ht.py
 fullEncoder/an_network_ht.py
