--- a/environment.yml
+++ b/environment.yml
@@ -11,8 +11,10 @@ dependencies:
   - scipy=1.10.0
   - seaborn=0.12.2
   - tqdm=4.64.1
+  - pytables=3.7.0
   - jupyter=1.0.0
   - pip
   - pip:
       - tensorflow==2.10
       - pykeops==2.1
+      - pyinterval==1.2.0
