--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ script_get_allresults.py
 test_emergency.py
 utils/global_classes_ht.py
 fullEncoder/an_network_ht.py
+simpleBayes/decode_bayes_clean.py
