--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,8 @@ channels:
   - defaults
 dependencies:
   - python=3.10
+  - pip
+  - setuptools=74.1.2
   - numpy=1.23.5
   - pandas=1.5.2
   - matplotlib=3.6.2
@@ -13,8 +15,11 @@ dependencies:
   - tqdm=4.64.1
   - pytables=3.7.0
   - jupyter=1.0.0
-  - pip
   - pip:
+      - pyinterval==1.20
+      - pydot==1.4.2
+      - pydotplus==2.0.2
+      - graphviz==0.20.3
       - tensorflow==2.10
+      - tensorrt==8.6.0
       - pykeops==2.1
-      - pyinterval==1.2.0
