--- a/environment.yml
+++ b/environment.yml
@@ -1,26 +1,23 @@
-name: neuroencoders
+name: UpToDateneuroencoders
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.10
+  - python=3.13
   - pip
-  - setuptools=74.1.2
-  - numpy=1.23.5
-  - pandas=1.5.2
-  - matplotlib=3.6.2
-  - scikit-learn=1.2.1
-  - scipy=1.10.0
-  - seaborn=0.12.2
-  - tqdm=4.64.1
-  - pytables=3.7.0
-  - jupyter=1.0.0
   - pip:
-      - pyinterval==1.2.0
-      - pydot==1.4.2
-      - pydotplus==2.0.2
-      - graphviz==0.20.3
-      - tensorflow==2.10
-      - tensorrt==8.6.0
-      - pykeops==2.1
-      - pre-commit==4.0.1
+      - numpy
+      - pandas
+      - matplotlib
+      - scikit-learn
+      - scipy
+      - seaborn
+      - tqdm
+      - tables
+      - jupyter
+      - pydot
+      - pydotplus
+      - graphviz
+      - pykeops
+      - pytorch
+      - pre-commit
