--- a/environment.yml
+++ b/environment.yml
@@ -5,6 +5,7 @@ channels:
 dependencies:
   - python=3.10
   - pip
+  - shapely=2.0.7
   - setuptools=74.1.2
   - numpy=1.23.5
   - pandas=1.5.2
@@ -20,7 +21,9 @@ dependencies:
       - pydot==1.4.2
       - pydotplus==2.0.2
       - graphviz==0.20.3
-      - tensorflow==2.10
+      - tensorflow==2.15.0
       - tensorrt==8.6.0
       - pykeops==2.1
       - pre-commit==4.0.1
+      - dill==0.3.9
+      - lxml==5.3.2
