--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "neuroencoders"
-version = "2.0.1"
+version = "2.1"
 description = "Neuroencoders is a Python package for the analysis of neural data, including encoding models, decoding models, and visualization tools."
 authors = [
     { name = "Dima Bryzgalov", email = "bryzgalovdm@gmail.com" },
@@ -18,6 +18,7 @@ dependencies = [
     "isort>=6.0.1",
     "jupyter==1.0.0",
     "lxml>=5.3.2",
+    "mat73>=0.65",
     "matplotlib==3.6.2",
     "numba>=0.60.0",
     "numpy==1.23.5",
@@ -30,7 +31,9 @@ dependencies = [
     "pydot>=3.0.4",
     "pydotplus>=2.0.2",
     "pykeops>=2.2.3",
+    "pynapple>=0.9.0",
     "pyqt5>=5.15.11",
+    "scikeras>=0.12.0",
     "scikit-image>=0.24.0",
     "scikit-learn>=1.6.1",
     "scipy>=1.15.2",
@@ -38,9 +41,10 @@ dependencies = [
     "setuptools==74.1.2",
     "shapely>=2.1.0",
     "statannotations>=0.7.2",
-    "tables==3.7.0",
+    "tables>=3.10.1",
     "tensorflow==2.15.0",
     "tqdm>=4.67.1",
+    "wandb>=0.20.1",
 ]
 
 [tool.uv.workspace]
