--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,10 @@ requires-python = ">=3.10"
 dependencies = [
     "bokeh>=3.7.3",
     "cmcrameri>=1.9",
+    "denseweight>=0.1.2",
     "dill>=0.3.9",
     "graphviz>=0.20.3",
+    "h5py>=3.13.0",
     "ipykernel>=6.29.5",
     "ipympl>=0.9.7",
     "isort>=6.0.1",
@@ -30,9 +32,10 @@ dependencies = [
     "pre-commit>=4.2.0",
     "pydot>=3.0.4",
     "pydotplus>=2.0.2",
-    "pykeops>=2.2.3",
+    "pykeops>=2.3",
     "pynapple>=0.9.0",
     "pyqt5>=5.15.11",
+    "pyyaml>=6.0.2",
     "scikeras>=0.12.0",
     "scikit-image>=0.24.0",
     "scikit-learn>=1.6.1",
@@ -43,6 +46,7 @@ dependencies = [
     "statannotations>=0.7.2",
     "tables>=3.10.1",
     "tensorflow==2.15.0",
+    "termplotlib>=0.3.9",
     "tqdm>=4.67.1",
     "wandb>=0.20.1",
 ]
