--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "cmcrameri>=1.9",
     "denseweight>=0.1.2",
     "dill>=0.3.9",
+    "ffmpeg>=1.4",
     "graphviz>=0.20.3",
     "h5py>=3.13.0",
     "ipykernel>=6.29.5",
