improve: bayes functions and code update notebooks as well

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ notebooks/debug.ipynb
 /notebooks/hyper_paper.ipynb
 /notebooks/get_gifs.py
 /notebooks/this is gold.ipynb
+notebooks/bayes_decoders.pickle
+.gitignore
+notebooks/bayes_matrices.pickle
+notebooks/outputs.pickle
