--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,11 +59,16 @@ dev = [
     "ephyviewer>=1.7.0",
     "imageio[ffmpeg,pyav]>=2.37.0",
     "memory-profiler>=0.61.0",
+    "openpyxl>=3.1.5",
+    "pandas>=2.1.0",
     "plotly>=6.2.0",
     "psutil>=7.0.0",
     "pympler>=1.1",
+    "requests>=2.32.4",
     "ruff>=0.11.8",
+    "scipy>=1.15.3",
     "spikeinterface[full]>=0.102.0",
+    "xlsxwriter>=3.2.5",
 ]
 
 [tool.ruff]
