--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ dev = [
     "ephyviewer>=1.7.0",
     "imageio[ffmpeg,pyav]>=2.37.0",
     "memory-profiler>=0.61.0",
+    "neuroencoders",
     "openpyxl>=3.1.5",
     "pandas>=2.1.0",
     "plotly>=6.2.0",
