update: uv pyproject to handle new versions of spikeinterface (with custom MOBS coloring) update ephyviewer notebook accordingly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,12 @@ dependencies = [
     "ipykernel>=6.29.5",
     "ipympl>=0.9.7",
     "isort>=6.0.1",
-    "jupyter==1.0.0",
+    "jupyter>=1.1.1",
     "lxml>=5.3.2",
     "mat73>=0.65",
-    "matplotlib==3.6.2",
+    "matplotlib>=3.6.2",
     "numba>=0.60.0",
-    "numpy==1.23.5",
+    "numpy<=2",
     "nvidia-cudnn-cu12~=8.9",
     "opencv-python>=4.8.1.78",
     "pandas>=2.1.0",
@@ -46,7 +46,7 @@ dependencies = [
     "shapely>=2.1.0",
     "statannotations>=0.7.2",
     "tables>=3.10.1",
-    "tensorflow==2.15.0",
+    "tensorflow",
     "termplotlib>=0.3.9",
     "tqdm>=4.67.1",
     "wandb>=0.20.1",
@@ -58,6 +58,7 @@ dev = [
     "dash>=3.1.1",
     "ephyviewer>=1.7.0",
     "imageio[ffmpeg,pyav]>=2.37.0",
+    "kilosort>=4.1.1",
     "memory-profiler>=0.61.0",
     "neuroencoders",
     "openpyxl>=3.1.5",
@@ -68,7 +69,7 @@ dev = [
     "requests>=2.32.4",
     "ruff>=0.11.8",
     "scipy>=1.15.3",
-    "spikeinterface[full]>=0.102.0",
+    "spikeinterface[full]>=0.103.0",
     "xlsxwriter>=3.2.5",
 ]
 
