fixed: keras symbolics now work! - had to refactor a lot : remove unused inputs - new versions of numpy/matplotlib - moved save weights from all ckpt to new weights.h5 - better masking - dataset moved to gpu automatically with better calls - changed float64 to float32 where necessary
TODO: add get_config to all custom layers for saving model in .keras
fashion

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "numba>=0.60.0",
     "numpy<=2",
     "nvidia-cudnn-cu12~=8.9",
-    "opencv-python>=4.8.1.78",
+    "opencv-python-headless>=4.11.0.86",
     "pandas>=2.1.0",
     "parameterized>=0.9.0",
     "polars>=1.30.0",
