--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "setuptools==74.1.2",
     "shapely>=2.1.0",
     "statannotations>=0.7.2",
+    "statsmodels>=0.14.0",
     "tables>=3.10.1",
     "tensorflow",
     "termplotlib>=0.3.9",
