--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ dev = [
     "dash>=3.1.1",
     "ephyviewer>=1.7.0",
     "imageio[ffmpeg,pyav]>=2.37.0",
+    "keras-tuner>=1.4.8",
     "kilosort>=4.1.1",
     "memory-profiler>=0.61.0",
     "neuroencoders",
