--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "pylibraft-cu12>=25.10",
     "pynapple>=0.9.0",
     "pyqt5>=5.15.11",
+    "pytest>=9.0.2",
     "pyyaml>=6.0.2",
     "raft-dask-cu12>=25.10",
     "scikeras>=0.12.0",
