--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,25 +6,23 @@ repos:
         files: .*.py$           
     -   id: end-of-file-fixer
         files: .*.py$
+    -   id: check-yaml
+    -   id: check-added-large-files
+    -   id: check-toml
 
 -   repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
     rev: v0.11.8
     hooks:
-      # Run the formatter.
+      - id: ruff
+        args: [ --fix, --exit-zero ]
       - id: ruff-format
-        types_or: [ python, pyi ]
 
--   repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 23.11.0
+-   repo: local
     hooks:
-    -   id: black-jupyter
-        args: [--line-length=88]
-        files: .*.ipynb$           
-# -   repo: https://github.com/pycqa/isort
-#     rev: 5.11.2
-#     hooks:
-#       - id: isort
-#         name: isort (python)
-#         args: [--profile, black, --filter-files]
-#         types_or: [ python, pyi ]
+    -   id: pytest
+        name: pytest
+        entry: uv run pytest tests/
+        language: system
+        pass_filenames: false
+        always_run: true
+        stages: [pre-commit, pre-push]
